--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,7 @@
   <body>
     <nav>
 <ul>
-<li><a href="/">Home</a></li>
-<li><a href="/about">About</a></li>
-<li><a href="/cv">CV</a></li>
-<li><a href="/blog">Blog</a></li>
+<a href="/">Home</a>&nbsp&nbsp<a href="/about">About</a>&nbsp&nbsp<a href="/cv">CV</a>&nbsp&nbsp<a href="/blog">Blog</a>
 </ul>
     </nav>
 <div class="container">
@@ -22,13 +19,6 @@
   {{ content }}
 
 </div>
-  
-  <footer>
-   <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-   </ul>
-  </footer>
   </body>
 
 </html>
