--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
 
   <body>
     <nav>
-<ul>
-<a href="/">Home</a>&nbsp&nbsp<a href="/about">About</a>&nbsp&nbsp<a href="/cv">CV</a>&nbsp&nbsp<a href="/blog">Blog</a>
+<ul><a href="/">Home</a>&nbsp&nbsp<a href="/about">About</a>&nbsp&nbsp<a href="/cv">CV</a>&nbsp&nbsp<a href="/blog">Blog</a>
 </ul>
     </nav>
 <div class="container">
