--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,11 @@
   
   </head>
 
+<body>
+<nav>
+<a href="/">Home</a>&nbsp&nbsp<a href="/about">About</a>&nbsp&nbsp<a href="/cv">CV</a>&nbsp&nbsp<a href="/blog">Blog</a>
 
-  <body>
-    <nav>
-<ul><a href="/">Home</a>&nbsp&nbsp<a href="/about">About</a>&nbsp&nbsp<a href="/cv">CV</a>&nbsp&nbsp<a href="/blog">Blog</a>
-</ul>
-    </nav>
+</nav>
 <div class="container">
 
   {{ content }}
