--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
 <body>
 <nav>
-<a href="/">Home</a>&nbsp&nbsp<a href="/about">About</a>&nbsp&nbsp<a href="/cv">CV</a>&nbsp&nbsp<a href="/blog">Blog</a>
+<a href="/">Home</a>&nbsp&nbsp<a href="/Education">Education</a>&nbsp&nbsp<a href="/cv">CV</a>&nbsp&nbsp<a href="/blog">Blog</a>
 
 </nav>
 <div class="container">
