--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
 <body>
 <nav>
-<a href="/">Home</a>&nbsp&nbsp&nbsp<a href="/Education">Education</a>&nbsp&nbsp&nbsp<a href="/Presentations">Presentations</a>&nbsp&nbsp&nbsp<a href="/Contact me">Contact me</a>
+<a href="/">Home</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/Education">Education</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/Presentations">Presentations</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/Contact me">Contact me</a>
 
 </nav>
 <div class="container">
