--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,17 @@ a:hover {
   content: "»";
   margin-right: .5em;
 }
+.column {
+  float: left;
+  width: 50%;
+}
 
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 /* Content */
 div.content pre {
   background: #333333;
