--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
 <body>
 <nav>
-<a href="/">Home</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/CV">Education</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/Teaching">Teaching</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/Contact me">Contact me</a>
+<a href="/">Home</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/CV">CV</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/Teaching">Teaching</a>&nbsp&nbsp&nbsp&nbsp&nbsp<a href="/Contact me">Contact me</a>
 
 </nav>
 <div class="container">
